# ibms

./: README.md
edge_computing/soc_esp32/: CMakeLists.txt  sdkconfig
edge_computing/soc_esp32/main/: float32.cc  input.h  main.cc  main_twai.cc  model.cc
edge_computing/soc_esp32/model/tflite/: fraunhof_soh.tflite
edge_computing/soc_esp32/send_can_messages/: can_send.py  signals.dbc  signals.ini
edge_computing/soc_esp32/send_can_messages/data/: test_x_0deg.pkl  test_x_10deg.pkl  test_x_25deg.pkl  test_x_n10deg.pkl  test_y_0deg.pkl  test_y_10deg.pkl  test_y_25deg.pkl  test_y_n10deg.pkl  train_y.pkl
edge_computing/soh_esp32/: CMakeLists.txt  sdkconfig
edge_computing/soh_esp32/main/: CMakeLists.txt  input.h  lstm_esp32_test.code-workspace  main_twai.cc  model.cc
edge_computing/soh_esp32/model/model/: best_model_flat.h5
edge_computing/soh_esp32/model/model_cc/: keras_23_300.cc
edge_computing/soh_esp32/model/tflite/: keras_lstm_23_300.tflite  keras_lstm_25_300.tflite
soc_estimation/: .gitignore  README.md
soc_estimation/doc/: IP0355_(iBMS).pptx
soc_estimation/soc-eval/: .env  README.md  converter.py  lstm_models.py  parameters.py  requirements.txt  soc_eval.py
soc_estimation/soc-eval/lg/: __init__.py  data_preprocessor.py  utils.py
soc_estimation/soc-eval/saved/LSTM_10_Dense_64_32_8/: fingerprint.pb  keras_metadata.pb  saved_model.pb
soc_estimation/src/: CMakeLists.txt  README.md  sdkconfig
soc_estimation/src/main/: CMakeLists.txt  input_arr.h  main_functions.cc  model.cc  output_handler.cc  output_handler.h
(+9 files in other folders)
